<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="navigator"
            type="com.naemo.contactmanager.ui.add.AddNavigator" />

        <variable
            name="viewModel"
            type="com.naemo.contactmanager.ui.add.AddViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.add.AddActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:lines="1"
                android:inputType="textPersonName"
                android:textSize="15sp"
                android:hint="@string/first_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:lines="1"
                android:inputType="textPersonName"
                android:textSize="15sp"
                android:hint="@string/last_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:lines="1"
                android:inputType="phone"
                android:textSize="15sp"
                android:hint="@string/phone_number_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> navigator.datePick()}"
                android:textSize="15sp"
                android:paddingTop="10dp"
                android:drawableEnd="@drawable/ic_date"
                android:drawablePadding="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="4dp"
                android:hint="@string/birthday_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/background_dark"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:lines="1"
                android:inputType="text"
                android:textSize="15sp"
                android:hint="@string/address_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:lines="1"
                android:inputType="number"
                android:textSize="15sp"
                android:hint="@string/zip_code_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_icon"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:clickable="true"
            android:background="@color/colorAccent"
            android:onClick="@{(view) -> navigator.saveContact()}"
            app:srcCompat="@drawable/ic_done_white"
            android:focusable="true" />



    </LinearLayout>
</layout>
